--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.small-flag {
+  width: 50px;
+}
+.small-flag-40 {
+  width: 35px;
+}
+.mr-1 {
+  margin-right: 5px;
+}
